--- a/portal.html
+++ b/portal.html
@@ -117,8 +117,8 @@
 
 <script>
     // Configura tu cliente Supabase
-    const supabaseUrl = '[TU_NUEVA_URL_SUPABASE]'; // <--- PEGA TU URL
-    const supabaseAnonKey = '[TU_NUEVA_KEY_SUPABASE]'; // <--- PEGA TU ANON KEY
+    const supabaseUrl = 'https://sncznbowdiarakoekxit.supabase.co'; 
+    const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNuY3puYm93ZGlhcmFrb2VreGl0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjAzNTcwMTgsImV4cCI6MjA3NTkzMzAxOH0.X7hSM3_h0kPPpbxm-y7pbtOPXpnmk41uiwrN4lnGRJU'; 
     const { createClient } = supabase;
     const supabaseClient = createClient(supabaseUrl, supabaseAnonKey);
 
