--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         .btn-panel { color: var(--primary); border: 1px solid var(--muted); margin-left: 10px; }
         .btn-panel:hover { background-color: var(--primary); color: white; border-color: var(--primary); }
 
-        /* --- SECTION HERO (Fondo de Puesta de Sol y Overlay) --- */
+        /* --- SECTION HERO (Fondo de Puesta de Sol y Overlay Mejorado) --- */
         .hero {
             position: relative;
             height: 85vh; 
@@ -93,8 +93,10 @@
             /* NUEVO FONDO DE PUESTA DE SOL */
             background-image: url('7B7421AF-ED37-47DE-BCD2-4C0A4346C38A.jpg');
             background-size: cover; 
-            background-position: center bottom; 
             background-repeat: no-repeat; 
+            
+            /* CORRECCIÓN CRÍTICA: Mueve el punto focal de la imagen 30% desde la parte superior para mostrar el horizonte */
+            background-position: center 30%;
             
             /* OVERLAY OSCURO PARA LEGIBILIDAD (55% de opacidad) */
             box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.55); 
@@ -121,7 +123,7 @@
         }
         /* Ajuste específico para el texto de acento en el Hero */
         .hero-content p:nth-child(1) {
-             color: var(--bright-accent) !important; /* Dorado brillante para destacar */
+             color: var(--bright-accent) !important; /* Dorado brillante */
              text-shadow: none;
         }
 
@@ -270,12 +272,11 @@
             /* Ajustamos la imagen en móvil */
             .hero-image { position: relative; height: 35vh; margin-top: 30px; width: 60%; max-width: 300px; right: auto; transform: translateX(0) translateY(0); }
             .hero-image img { 
-                /* Remove mask and filter for clean mobile view */
                 filter: none; 
                 mask-image: none;
                 -webkit-mask-image: none;
                 box-shadow: 0 10px 20px rgba(0,0,0,0.15);
-                border-radius: 8px; /* Damos un borde suave en móvil */
+                border-radius: 8px; 
                 object-position: center;
             } 
         }
@@ -410,7 +411,7 @@
 <script>
     // CREDENCIALES INTEGRADAS Y FUNCIONALES
     const supabaseUrl = 'https://sncznbowdiarakoekxit.supabase.co'; 
-    const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNuY3puYm93ZGlhcmFrb2VreGl0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjAzNTcwMTgsImV4cCI6MjA3NTkzMzAxOH0.X7hSM3_h0kPPpbxm-y7pbtOPXpnmk41uiwrN4lnGRJU'; 
+    const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNuY3puYm93ZGlhcmFrakb2VreGl0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjAzNTcwMTgsImV4cCI6MjA3NTkzMzAxOH0.X7hSM3_h0kPPpbxm-y7pbtOPXpnmk41uiwrN4lnGRJU'; 
     const { createClient } = supabase;
     const supabaseClient = createClient(supabaseUrl, supabaseAnonKey);
 
