--- a/portal.html
+++ b/portal.html
@@ -1,122 +1,5 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acceso Profesional | Psicofitt</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-    <style>
-        /* Estilos generales y paleta de colores del sitio principal */
-        :root {
-            --primary: #2b3a67;
-            --accent: #6A9B7A; /* NUEVO VERDE SALVIA */
-        }
-
-        body {
-            font-family: 'Montserrat', sans-serif;
-            /* Fondo que evoque el Hero del sitio principal */
-            background: linear-gradient(rgba(43, 58, 103, 0.85), rgba(43, 58, 103, 0.85)), url('hero-psicologia.jpg') no-repeat center center/cover;
-            background-attachment: fixed;
-            color: #495057;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            padding: 20px;
-        }
-        .login-card {
-            background-color: #fff;
-            padding: 40px;
-            border-radius: 10px;
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
-            width: 100%;
-            max-width: 400px;
-            text-align: center;
-        }
-        .login-card h2 {
-            font-family: 'Playfair Display', serif;
-            color: var(--primary);
-            margin-bottom: 30px;
-            font-size: 2rem;
-        }
-        .form-group {
-            text-align: left;
-            margin-bottom: 20px;
-        }
-        .form-group label {
-            display: block;
-            margin-bottom: 5px;
-            font-weight: 700;
-        }
-        .form-group input {
-            width: 100%;
-            padding: 12px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-sizing: border-box;
-        }
-        .btn-primary {
-            background-color: var(--accent);
-            color: white;
-            padding: 12px 25px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 1rem;
-            width: 100%;
-            transition: background-color 0.3s;
-        }
-        .btn-primary:hover {
-            background-color: #5d8c6b;
-        }
-        #message {
-            margin-top: 20px;
-            font-weight: 700;
-        }
-        .forgot-password {
-            display: block;
-            margin-top: 15px;
-            color: var(--muted);
-            text-decoration: none;
-        }
-        .forgot-password:hover {
-            color: var(--accent);
-        }
-        .logo-text {
-            color: var(--primary);
-            font-family: 'Playfair Display', serif;
-            font-size: 1.5rem;
-            margin-bottom: 10px;
-            display: block;
-        }
-    </style>
-</head>
-<body>
-
-<div class="login-card">
-    <span class="logo-text">Psicofitt</span>
-    <h2>Acceso Profesional</h2>
-    <form id="loginForm">
-        <div class="form-group">
-            <label for="email">Correo Electrónico</label>
-            <input type="email" id="email" required>
-        </div>
-        <div class="form-group">
-            <label for="password">Contraseña</label>
-            <input type="password" id="password" required>
-        </div>
-        <button type="submit" class="btn-primary">Ingresar</button>
-        <a href="#" class="forgot-password">¿Olvidaste tu contraseña? (Requiere implementación Supabase)</a>
-        <div id="message"></div>
-    </form>
-</div>
-
 <script>
-    // Configura tu cliente Supabase
+    // CREDENCIALES INTEGRADAS (Asegúrate de que tus credenciales estén aquí)
     const supabaseUrl = 'https://sncznbowdiarakoekxit.supabase.co'; 
     const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNuY3puYm93ZGlhcmFrb2VreGl0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjAzNTcwMTgsImV4cCI6MjA3NTkzMzAxOH0.X7hSM3_h0kPPpbxm-y7pbtOPXpnmk41uiwrN4lnGRJU'; 
     const { createClient } = supabase;
@@ -126,7 +9,7 @@
     async function checkSession() {
         const { data: { session } } = await supabaseClient.auth.getSession();
         if (session) {
-            // Si hay sesión, redirige al panel (panel.html)
+            // 1. Redirección si ya hay sesión activa
             window.location.href = 'panel.html'; 
         }
     }
@@ -139,7 +22,7 @@
         const email = document.getElementById('email').value;
         const password = document.getElementById('password').value;
         message.textContent = 'Iniciando sesión...';
-        message.style.color = var(--accent);
+        message.style.color = 'var(--accent)';
 
         const { error } = await supabaseClient.auth.signInWithPassword({
             email: email,
@@ -150,7 +33,7 @@
             message.textContent = `Error de acceso: ${error.message}. Verifica tus credenciales.`;
             message.style.color = 'red';
         } else {
-            // Éxito: Redirige al panel.html
+            // 2. Redirección después de iniciar sesión exitosamente
             message.textContent = 'Acceso exitoso. Redirigiendo...';
             window.location.href = 'panel.html';
         }
@@ -158,5 +41,3 @@
 
     document.addEventListener('DOMContentLoaded', checkSession);
 </script>
-</body>
-</html>
