--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
         if (targetContainer) {
             window.requestAnimationFrame(() => {
                  // SCROLL INSTANTÁNEO Y FORZADO
-                 window.scrollTo({ top: targetContainer.offsetTop - 50, behavior: 'instant' }); 
+                 window.scrollTo({ top: targetContainer.offsetTop - 50, behavior: 'auto' }); 
             });
         }
     }
@@ -820,7 +820,7 @@
         if (targetContainer) {
             window.requestAnimationFrame(() => {
                  // SCROLL INSTANTÁNEO Y FORZADO
-                 window.scrollTo({ top: targetContainer.offsetTop - 50, behavior: 'instant' }); 
+                 window.scrollTo({ top: targetContainer.offsetTop - 50, behavior: 'auto' }); 
             });
         }
     }
