--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
         };
         
         // Avanza automáticamente al formulario (Paso 4) al seleccionar una hora
-        validateTimeSelection();
+        showModal();
     }
 
     function validateTimeSelection() {
