--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
         };
         
         // Avanza automáticamente al formulario (Paso 4) al seleccionar una hora
-        showModal();
+        validateTimeSelection();
     }
 
     function validateTimeSelection() {
@@ -817,7 +817,7 @@
             return;
         }
         
-        showStep(4);
+        showModal();
     }
 
 
