--- a/panel.html
+++ b/panel.html
@@ -303,7 +303,7 @@
 
   <div class="sidebar">
     <div class="profile-pic">
-      <img id="sidebar-avatar" src="https://via.placeholder.com/150" alt="avatar"/>
+      <img id="sidebar-avatar" src="francisca-sin-fondo.png" alt="avatar"/>
     </div>
     <h4 id="sidebar-name">Cargando...</h4>
     <div class="sidebar small-muted" id="sidebar-sub">Cargando...</div>
