Update therapist description and services offered

--- a/index.html
+++ b/index.html
@@ -400,9 +400,9 @@
 <main>
     <section class="hero" id="home">
         <div class="hero-content fade-in-on-load">
-            <p style="color: var(--bright-accent); font-weight: 700; margin-bottom: 10px; font-size: 1rem;">PSICÓLOGA Y TERAPEUTA CERTIFICADA</p>
+            <p style="color: var(--bright-accent); font-weight: 700; margin-bottom: 10px; font-size: 1rem;">PSICÓLOGA CLINICA</p>
             <h1>Francisca Sandoval Campos</h1>
-            <p>Especialista en Ansiedad y Terapia Cognitivo-Conductual. Te ofrezco un espacio seguro y profesional para construir la vida con propósito que mereces.</p>
+            <p>Especialista en Psicoterapia. Te ofrezco un espacio seguro y profesional para construir la vida con propósito que mereces.</p>
              <a href="#" onclick="startBookingProcess(event)" class="btn btn-agenda btn-main-action">Comienza tu Bienestar Hoy</a>
         </div>
         
@@ -416,7 +416,7 @@
             <h2 style="margin-bottom: 20px;">Reembolsable: Isapres y Fonasa</h2>
             
             <p style="text-align: center; max-width: 800px; margin: 0 auto 40px; font-weight: 400; color: var(--primary);">
-                Como psicóloga certificada, mis servicios son **reembolsables** mediante la mayoría de las Isapres (a través de boleta) y Fonasa (según el tramo de tu plan). Consulta la cobertura con tu aseguradora.
+                Como psicóloga certificada, mis servicios son reembolsables mediante la mayoría de las Isapres y Fonasa tiene cobro diferencial. Consulta la cobertura con tu aseguradora.
             </p>
 
             <div class="slider-container">
@@ -450,8 +450,8 @@
             </div>
             <div class="about-text">
                 <h2 style="text-align: left; margin-bottom: 25px; color:var(--accent); font-size: 2.2rem;">Enfoque Centrado en tu Bienestar</h2>
-                <p>Mi enfoque es **integrador y basado en evidencia**. Creo firmemente que la terapia es una herramienta poderosa para el autoconocimiento y el crecimiento continuo. Mi objetivo es crear un espacio seguro donde puedas expresarte sin juicios y encontrar estrategias prácticas y efectivas para tu día a día.</p>
-                <p>Con **[Tu Experiencia]**, te ayudaré a manejar la ansiedad, superar el duelo y fortalecer tu resiliencia emocional.</p>
+                <p>Mi enfoque es integrador y basado en evidencia. Creo firmemente que la terapia es una herramienta poderosa para el autoconocimiento y el crecimiento continuo. Mi objetivo es crear un espacio seguro donde puedas expresarte sin juicios y encontrar estrategias prácticas y efectivas para tu día a día.</p>
+                <p>Con mi experiencia en el ambito clinico, te ayudaré a manejar la ansiedad, superar el duelo y fortalecer tu resiliencia emocional.</p>
                 <p style="font-style: italic; color: var(--accent); margin-top: 25px; font-weight: 500;">Áreas de especialidad: Ansiedad, Duelo, Estrés y Terapia Individual para Adultos.</p>
             </div>
         </div>
