--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
         }
         .navbar { display: flex; justify-content: space-between; align-items: center; }
         
-        /* LOGO: AJUSTES DE TAMAÑO Y ELIMINACIÓN DE TEXTO (AJUSTADO) */
+        /* LOGO: AJUSTES DE TAMAÑO Y ELIMINACIÓN DE TEXTO (AUMENTADO) */
         .logo-area { display: flex; align-items: center; gap: 0; }
-        .logo-area img { height: 110px; } /* Agrandado de 90px a 110px */
+        .logo-area img { height: 110px; } /* MÁS GRANDE */
         .logo-text { display: none; } /* OCULTAMOS EL TEXTO */
         .logo-text-only-icon { display: flex; align-items: center; }
 
@@ -130,11 +130,11 @@
         .hero-image {
             position: absolute; 
             right: 5%; 
-            /* AJUSTE TAMAÑO/POSICIÓN */
-            bottom: -5%; /* Mueve la imagen más arriba */
-            height: 95%; /* Hace el contenedor más grande (antes era 85%) */
-            width: 40%; /* Un poco más de ancho (antes era 35%) */
-            max-width: 450px; /* Aumenta el límite máximo (antes era 400px) */
+            /* AJUSTE POSICIÓN CRÍTICO: Subido a 0% */
+            bottom: 0%; 
+            height: 95%; /* Más grande */
+            width: 40%; 
+            max-width: 450px; /* Más grande */
             /* FIN AJUSTE */
             z-index: 10;
             transition: transform 0.1s ease-out; 
